<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SetFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/titleEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/title_hint"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:maxLines="1"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints=""
            tools:targetApi="o"/>

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/detailSwitch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                app:layout_column="0"
                app:layout_row="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month"
                app:layout_column="1"
                app:layout_row="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                app:layout_column="2"
                app:layout_row="0" />

            <Spinner
                android:id="@+id/yearSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/enter_year"
                android:minHeight="48dp"
                android:scrollbarSize="3dp"
                app:layout_column="0"
                app:layout_row="1" />

            <Spinner
                android:id="@+id/monthSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/enter_month"
                android:minHeight="48dp"
                android:scrollbarSize="3dp"
                app:layout_column="1"
                app:layout_row="1" />

            <Spinner
                android:id="@+id/daySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/enter_day"
                android:minHeight="48dp"
                android:scrollbarSize="3dp"
                app:layout_column="2"
                app:layout_row="1" />

            <TextView
                android:id="@+id/hourText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/hour"
                android:visibility="invisible"
                app:layout_column="0"
                app:layout_row="2" />

            <TextView
                android:id="@+id/minuteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/minute"
                android:visibility="invisible"
                app:layout_column="1"
                app:layout_row="2" />

            <TextView
                android:id="@+id/secondText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/second"
                android:visibility="invisible"
                app:layout_column="2"
                app:layout_row="2" />

            <Spinner
                android:id="@+id/hourSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/enter_hour"
                android:minHeight="48dp"
                android:scrollbarSize="3dp"
                android:visibility="invisible"
                app:layout_column="0"
                app:layout_row="3" />

            <Spinner
                android:id="@+id/minuteSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/enter_minute"
                android:minHeight="48dp"
                android:scrollbarSize="3dp"
                android:visibility="invisible"
                app:layout_column="1"
                app:layout_row="3" />

            <Spinner
                android:id="@+id/secondSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/enter_second"
                android:minHeight="48dp"
                android:scrollbarSize="3dp"
                android:visibility="invisible"
                app:layout_column="2"
                app:layout_row="3" />

        </androidx.gridlayout.widget.GridLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/detailSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:minHeight="48dp"
            android:text="@string/detail_switch"
            app:layout_constraintBottom_toTopOf="@+id/startButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#03A9F4"
            android:paddingTop="@dimen/button_margin"
            android:paddingBottom="@dimen/button_margin"
            android:text="@string/start_button"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/achieveButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/achieveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-16dp"
            android:backgroundTint="#8BC34A"
            android:drawableTop="@drawable/ic_baseline_verified_24"
            android:paddingBottom="@dimen/button_margin"
            android:text="@string/achieve"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>